--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
    <link rel="stylesheet" href="css/style.min.css">
 
    <title>Hello, world!</title>
+   <title>not hello and try</title>
 </head>
 
 <body>
